--- a/dz 2.ipynb
+++ b/dz 2.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "85c0f36c-b92f-4f23-9910-3b1bd966b3a5",
    "metadata": {},
    "outputs": [
@@ -337,8 +337,8 @@
    ],
    "source": [
     "## Уровень 2\n",
-    "values = list(a.values())\n",
-    "if len(values) == len(set(values)):\n",
+    "keys = list(a.keys())\n",
+    "if len(keys) == len(set(keys)):\n",
     "    print(\"Регистрация выполнена успешно\")\n",
     "else: print('Пользователь с таким паролем уже существует')\n"
    ]
