--- a/dz 2.ipynb
+++ b/dz 2.ipynb
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "92c8c77f-6bc5-4870-831f-465ddc061169",
    "metadata": {},
    "outputs": [],
@@ -322,39 +322,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 19,
    "id": "5cd10df2-f19b-4b49-995d-2c35a5735688",
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "ename": "UnsupportedOperation",
-     "evalue": "not readable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mUnsupportedOperation\u001b[39m                      Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 12\u001b[39m\n\u001b[32m     10\u001b[39m         json.dump(a, f) \n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m12\u001b[39m \u001b[43mregister1\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mlogin\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpasswrd\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[36]\u001b[39m\u001b[32m, line 6\u001b[39m, in \u001b[36mregister1\u001b[39m\u001b[34m(login, passwrd)\u001b[39m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mregister1\u001b[39m (login, passwrd): \n\u001b[32m      5\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mdata.json\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mw\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m f:\n\u001b[32m----> \u001b[39m\u001b[32m6\u001b[39m         data1=\u001b[43mjson\u001b[49m\u001b[43m.\u001b[49m\u001b[43mload\u001b[49m\u001b[43m(\u001b[49m\u001b[43mf\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      7\u001b[39m     data1.get(\u001b[33m'\u001b[39m\u001b[33muser1\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      8\u001b[39m     res = data1.setdefault(\u001b[33m'\u001b[39m\u001b[33muser1\u001b[39m\u001b[33m'\u001b[39m, \u001b[33m'\u001b[39m\u001b[33mpassword1\u001b[39m\u001b[33m'\u001b[39m) \n",
-      "\u001b[36mFile \u001b[39m\u001b[32m~\\anaconda3\\Lib\\json\\__init__.py:293\u001b[39m, in \u001b[36mload\u001b[39m\u001b[34m(fp, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[39m\n\u001b[32m    274\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mload\u001b[39m(fp, *, \u001b[38;5;28mcls\u001b[39m=\u001b[38;5;28;01mNone\u001b[39;00m, object_hook=\u001b[38;5;28;01mNone\u001b[39;00m, parse_float=\u001b[38;5;28;01mNone\u001b[39;00m,\n\u001b[32m    275\u001b[39m         parse_int=\u001b[38;5;28;01mNone\u001b[39;00m, parse_constant=\u001b[38;5;28;01mNone\u001b[39;00m, object_pairs_hook=\u001b[38;5;28;01mNone\u001b[39;00m, **kw):\n\u001b[32m    276\u001b[39m \u001b[38;5;250m    \u001b[39m\u001b[33;03m\"\"\"Deserialize ``fp`` (a ``.read()``-supporting file-like object containing\u001b[39;00m\n\u001b[32m    277\u001b[39m \u001b[33;03m    a JSON document) to a Python object.\u001b[39;00m\n\u001b[32m    278\u001b[39m \n\u001b[32m   (...)\u001b[39m\u001b[32m    291\u001b[39m \u001b[33;03m    kwarg; otherwise ``JSONDecoder`` is used.\u001b[39;00m\n\u001b[32m    292\u001b[39m \u001b[33;03m    \"\"\"\u001b[39;00m\n\u001b[32m--> \u001b[39m\u001b[32m293\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m loads(\u001b[43mfp\u001b[49m\u001b[43m.\u001b[49m\u001b[43mread\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m,\n\u001b[32m    294\u001b[39m         \u001b[38;5;28mcls\u001b[39m=\u001b[38;5;28mcls\u001b[39m, object_hook=object_hook,\n\u001b[32m    295\u001b[39m         parse_float=parse_float, parse_int=parse_int,\n\u001b[32m    296\u001b[39m         parse_constant=parse_constant, object_pairs_hook=object_pairs_hook, **kw)\n",
-      "\u001b[31mUnsupportedOperation\u001b[39m: not readable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'petrov@mail.ru': '12345', 'ivanov@mail.ru': '67890'}\n"
      ]
     }
    ],
    "source": [
     "## Уровень 2\n",
-    "login = 'petrov@mail.ru'\n",
-    "passwrd = '12345'\n",
-    "def register1 (login, passwrd): \n",
-    "    with open('data.json', 'w') as f:\n",
-    "        data1=json.load(f)\n",
-    "    data1.get('user1')\n",
-    "    res = data1.setdefault('user1', 'password1') \n",
-    "    with open('data1.json', 'w') as f:\n",
-    "        json.dump(a, f) \n",
+    "from pathlib import Path\n",
+    "login1 = 'ivanov@mail.ru'\n",
+    "passwrd1 = '67890'\n",
+    "def register1 (login1, passwrd1): \n",
+    "    if Path('data.json').exists():\n",
+    "        with open('data.json', 'r') as f:\n",
+    "            data1=json.load(f)\n",
+    "    b=data1.get(login1)\n",
+    "    if b==None:\n",
+    "        data1.setdefault(login1, passwrd1)\n",
+    "        print(data1)\n",
+    "        with open('data1.json', 'w') as f:\n",
+    "            json.dump(data1, f)\n",
+    "    else:\n",
+    "        print('пользователь с таким логином уже существует')       \n",
     "pass\n",
-    "register1 (login, passwrd)"
+    "register1 (login1, passwrd1)"
    ]
   },
   {
@@ -364,37 +364,37 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndentationError",
-     "evalue": "expected an indented block after 'with' statement on line 3 (1270456139.py, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[32]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mdata2=json.load(f)\u001b[39m\n    ^\n\u001b[31mIndentationError\u001b[39m\u001b[31m:\u001b[39m expected an indented block after 'with' statement on line 3\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Логина с таким именем не существует\n"
      ]
     }
    ],
    "source": [
     "## Уровень 3\n",
-    "def register2 (login, passwrd):\n",
-    "    with open('data1.json', 'w') as f:\n",
-    "    data2=json.load(f)\n",
-    "    if passwrd in data2.values():\n",
-    "        print('пароль правильный')\n",
+    "login2 = 'user2 '\n",
+    "passwrd2 = 'pass2'\n",
+    "def register2 (login2, passwrd2):\n",
+    "    with open('data1.json', 'r') as f:\n",
+    "        data2=json.load(f)\n",
+    "    if data2.get(login2) !=None:\n",
+    "        if data2[login2]==passwrd2:\n",
+    "            print('Вход в систему выполнен успешно')\n",
+    "        else:\n",
+    "            print('пароль неправильный')\n",
     "    else:\n",
-    "        print('пароль неправильный')\n",
-    "    if login in data2.keys():\n",
-    "        print('логин правильный')\n",
-    "    else:\n",
-    "        print('логин неправильный') \n",
+    "        print('Логина с таким именем не существует')\n",
     "    with open('data2.json', 'w') as f:\n",
-    "        json.dump(a, f)        \n",
+    "        json.dump(data2, f)        \n",
     "pass\n",
-    " "
+    "register2 (login2, passwrd2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "955eae77-14a3-4403-a4b0-880c05b15393",
+   "id": "8bf14676-ebe3-441c-93b8-de0b16fd80d3",
    "metadata": {},
    "outputs": [],
    "source": []
